k8s/author-api-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: author-api-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: author-api-pod
  template:
    metadata:
      labels:
        app: author-api-pod
    spec:
      containers:
        - name: author-api-container
          image: __DOCKER_IMAGE__
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"

---
apiVersion: v1
kind: Service
metadata:
  name: author-api-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: author-api-pod
  ports:
    - name: author-api-port
      port: 80
      targetPort: 80
      protocol: TCP
