k8s/comment-api-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-api-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: comment-api-pod
  template:
    metadata:
      labels:
        app: comment-api-pod
    spec:
      containers:
        - name: comment-api-container
          image: ryuichi24/bookdb-comment-service:9c93b0b
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"

---
apiVersion: v1
kind: Service
metadata:
  name: comment-api-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: comment-api-pod
  ports:
    - name: comment-api-port
      port: 80
      targetPort: 80
      protocol: TCP
