k8s/comment-api.depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-api-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: comment-api-pod
  template:
    metadata:
      labels:
        app: comment-api-pod
    spec:
      containers:
        - name: comment-api-container
          image: __DOCKER_IMAGE__
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"

---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: comment-api-clusterIP
spec:
  type: ClusterIP
  selector:
    app: comment-api-pod
  ports:
    - name: comment-api-port
      port: 80
      targetPort: 80
      protocol: TCP
