k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
spec:
  rules:
    - host: test.com
      http:
        paths:
          - path: /author-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: author-api-cluster-ip
                port:
                  number: 80
          - path: /book-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: book-api-cluster-ip
                port:
                  number: 80
          - path: /comment-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: comment-api-cluster-ip
                port:
                  number: 80
